--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <label > UrlImagen:</label>
         <input type="text" name="" id="UrlImagen">
         <button id="Enviar">Enviar</button>
+        <button id="Borrar">Borarr Ultimo</button>
     </div>
     <br>
     <div class="container">
